update (app): rename instances of react-starter/react-template to accountable/accountable-fe

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/react-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Starter</title>
+    <title>Accountable</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -24,13 +24,13 @@
 
     <!-- Meta Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta property="og:url" content="https://react-starter.web.app/" />
+    <meta property="og:url" content="https://accountable.web.app/" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="React Starter" />
-    <meta property="og:title" content="React Starter Kit" />
+    <meta property="og:site_name" content="Accountable" />
+    <meta property="og:title" content="Your Accountability Buddy" />
     <meta
       property="og:description"
-      content="A template repository for startup essentials of a React app."
+      content="An 'accountability buddy' app to help keep track of goal and activity progresses."
     />
     <meta
       property="og:image"
